    * Application changes:
        * dpkg control dependency: Base dependency filterin mechanism on 
          depkg meta dependency_filter value.
        * dpkg control and copyright: warn when dh-make-perl boilerplate is found
        * Dpkg meta: new class to enable user to customize dpkg editor. 
          (email-updates and dependency-filter). Content of meta is saved in
          ~/.dpkg-meta.yml
        * Dpkg control: change e-mail address based on content of meta 
          email-updates
    * Framework changes:
	* value: added replace_follow parameter to specify automatic
	  replacement based on a hash somewhere in the configuration
	  tree
	* Extracted initialisation of reader and writer from new and moved in new
	  init method to avoid deep recursion on startup.
	* Use Any::Moose instead of plain Moose
	* Removed dependency on MooseX::Singleton
	* Model: added author, copyright, license fields. This data is not used by
	  Config::Model, but can be used in the user interface or to generate config
	  class doc
	* AnyThing: Fix parsing of multi line annotations. Now use Pod::POM 
	  to load annocation from Pod document
	* dist.ini: Depends on Pod::POM

2011-03-01 Dominique Dumont  <domi.dumont@free.fr> 1.235
    
    * Application changes:
        * dpkg control source model: Encourage Standard-Version 3.9.1
        * dpkg control dependency: only versions older than old-stable (i.e. 
          not found on madison) will trigger a warning
        * dpkg copyright: Handle license in header (Closes Debian #614776)
        * Dpkg copyright backend: skip empty copyright lines
        
    * Framework changes:
        * WarpedThing: Can warp based on the location in a tree. For instance to make
        an element mandatory in one place and not in another. Used by Debian copyright model
        * Value: mandatory values also require non-empty strings
        * config-edit: Force to load all sub-models (i.e. control, copyright) of